--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			 		<li><a href="">Inicio</a></li>
              		<li><a href="lecturas.html">Lecturas</a></li>
              		<li><a href="multimedia.html">Multimedia</a></li>
-             		<li><a href="actividades.html">Actividades</a></li>
+             		<li><a href="https://jbortiz.github.io/pag2_grupo_18/">Actividades</a></li>
              		<li><a href="autores.html">Autores</a></li>
 			 	</ul>
 	          <div class="row">
