--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
              		<li><a href="lecturas.html">Lecturas</a></li>
              		<li><a href="multimedia.html">Multimedia</a></li>
              		<li><a href="https://jbortiz.github.io/pag2_grupo_18/">Actividades</a></li>
-             		<li><a href="autores.html">Autores</a></li>
+             		<li><a href=" https://jbortiz.github.io/pag3_grupo_18/">Autores</a></li>
 			 	</ul>
 	          <div class="row">
 	        <div class="col">
