--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			 <h1 >Adminstración de Redes</h1>
 			 	<ul>
 			 		<li><a href="">Inicio</a></li>
-             		<li><a href="https://jbortiz.github.io/pag4_grupo_18/">Lecturas</a></li>
+             		<li><a href="https://jbortiz.github.io/pag-4-grupo-18/.">Lecturas</a></li>
              		<li><a href=" https://jbortiz.github.io/pag5_grupo_18/">Multimedia</a></li>
              		<li><a href="https://jbortiz.github.io/pag2_grupo_18/">Actividades</a></li>
              		<li><a href=" https://jbortiz.github.io/pag3_grupo_18/">Autores</a></li>
