--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	     <div class="col">
 	     	<h3> Objetivos Específicos</h3>
 	     	 Objetivo específico 1: 
-	     	<li>Conocer he implementar documentos de información en internet.</li>
+	     	<li>Conocer he implementar documentos de informaciófdfd.</li>
 	     	 Objetivo específico 2: 
 	     	 <li>Descripción de las tares y los objetivos de cada tema por abordar.</li>
 	     	 Objetivo específico 3: 
